--- a/index.html
+++ b/index.html
@@ -6,74 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>    
     <style>
-        body{
-            margin: 350px;
-        }
-        .divTable{
+
+     body{
+        margin: 80px 450px;
+     }
+      /* table div  */
+        .table{
             display: table;
-            width: auto;
+             width: 800px;       
         }
-        .divRow
-        {
-           display:table-row;
-           width:300px;
+        /* row div  */
+        .row{
+            display: table-row;
         }
-        img{
-            float: left;
-        }
-        .divCell
-        {
-            float:left;
-            display:table-cell;
-            width:300px;
+        /* row-cell div */
+        .row-cell{
+            display: table-cell;
+            padding: 10px;
+            border-bottom: 1px solid rgb(227,231,232);
+            vertical-align: middle;
         }
     </style>
-    
-    <div class="divTable">
-        <h2>Card</h2>
-        <div class="headRow">
-                <div class="divCell"> <strong>Product</strong></div>
-                <div  class="divCell"><strong>Price</strong></div>
-                <div  class="divCell"><strong>Total</strong></div>
+    <!-- heding -->
+    <h2>Card</h2>
+    <!-- table div -->
+    <div class="table">
+        <div class="row">
+            <!-- row-cell div -->
+            <div class="row-cell"><strong> Product</strong></div> 
+            <div class="row-cell"></div> 
+            <div class="row-cell"><strong>Price</strong></div>  
+            <div class="row-cell"><strong>Total</strong></div>
         </div>
-        <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell">Beige 5 Pocket Ankle Fit Trouser - 28, Beige</div>
-                <div  class="divCell">INR 1,599.00</div>
-                <div  class="divCell">INR 1,599.00</div>
+        <!-- row div -->
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell" style="width: px;"> Beige 5 Pocket Ankle Fit Trouser - 28, Beige</div>
+            <div class="row-cell">INR 1,599.00</div>
+            <div class="row-cell">INR 1,599.00</div>
         </div>
-        <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell" >Black Ankle Fit Jeans - 30, Black</div>
-                <div  class="divCell">INR 1,999.00</div>
-                <div  class="divCell">INR 1,999.00</div>
-    </div>
-         <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell">Navy Plain Slim Fit Trouser - 36, Navy</div>
-                <div  class="divCell">INR 1,299.00</div>
-                <div  class="divCell">INR 1,299.00</div>
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell">Black Ankle Fit Jeans - 30, Black</div>
+            <div class="row-cell">INR 1,999.00</div>
+            <div class="row-cell">INR 1,999.00</div>
         </div>
-            <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell">Dark Green Plain Slim Fit Trouser - 36, D.Green</div>
-                <div class="divCell">INR 1,299.00</div>
-                <div class="divCell">INR 1,299.00</div>
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell">Navy Plain Slim Fit Trouser - 36, Navy</div>
+            <div class="row-cell">INR 1,299.00</div>
+            <div class="row-cell">INR 1,299.00</div>
         </div>
-             <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell">M.Black Slim Fit Jeans - 36, M.Black</div>
-                <div  class="divCell">INR 1,999.00</div>
-                <div  class="divCell">INR 1,999.00</div>
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell">Dark Green Plain Slim Fit Trouser - 36, D.Green
             </div>
-            <div class="divRow"><hr>
-                <img src="./blacktouser-300x300.jpg" width="80">
-                <div class="divCell">M.Black Slim Fit Jeans - 36, M.Black</div>
-                <div  class="divCell">INR 1,999.00</div>
-                <div  class="divCell">INR 3,998.00</div>
-            </div>
+            <div class="row-cell">INR 1,299.00</div>
+            <div class="row-cell">INR 1,299.00</div>
+        </div>
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell">M.Black Slim Fit Jeans - 36, M.Black</div>
+            <div class="row-cell">INR 1,299.00</div>
+            <div class="row-cell">INR 1,299.00</div>
+        </div>
+        <div class="row">
+            <div class="row-cell"><img src="./blacktouser-300x300.jpg" width="80px"></div>
+            <div class="row-cell">Blue Plain Ankle Fit Jeans - 36, Blue</div>
+            <div class="row-cell">INR 1,299.00</div>
+            <div class="row-cell">INR 3,998.00</div>
+        </div>
     </div>
 </body>
 </html>
